# manager-for-ynab

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/actions/pre-test/: action.yml
.github/workflows/: main.yml
manager_for_ynab/: __init__.py  __main__.py  _auth.py  _main.py  _version.py  pending_income.py  pending_income.sql  zero_out.py
manager_for_ynab/auto_approve/: README.md  __init__.py  auto_approve.sql
manager_for_ynab/pending_income/: README.md  __init__.py  __main__.py  _main.py  pending_income.sql
manager_for_ynab/reconciler/: README.md  __init__.py  __main__.py  _main.py
manager_for_ynab/zero_out/: README.md  __init__.py  __main__.py
reconciler_for_ynab/: __init__.py  __main__.py  _main.py
testing/: fixtures.py  seed.sql
tests/: _main_test.py  pending_income_test.py  reconciler_test.py  version_test.py  zero_out_test.py
tests/auto_approve/: fixtures.py  test.py
tests/manager_for_ynab/: test.py  test_cli.py  test_version.py
tests/pending_income/: fixtures.py  test.py  test_pending_income.py
tests/reconciler/: test.py  test_reconciler.py
tests/zero_out/: fixtures.py  test.py  test_zero_out.py
tools/pending-income/: README.md
tools/reconciler/: README.md
tools/zero-out/: README.md
