[metadata]
name = manager_for_ynab
version = 1.1.1
description = Manager for YNAB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxr/manager-for-ynab
author = Max R
author_email = mxr@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = ynab, budget, plan, cli, reconcile, automation, manager

[options]
packages = find:
install_requires =
    Babel
    aiohttp
    gnureadline
    rich
    sqlite-export-for-ynab>=2.2.0
    tldm
    ynab>=4
python_requires = >=3.14

[options.entry_points]
console_scripts =
    manager-for-ynab = manager_for_ynab._main:main

[options.package_data]
* =
    py.typed
    *.sql

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[tox:tox]
envlist = py,pypy3,pre-commit

[testenv]
deps = -rrequirements-dev.txt
commands =
    coverage erase
    coverage run -m pytest {posargs:tests}
    coverage report

[testenv:pre-commit]
skip_install = true
deps = pre-commit-uv
commands = pre-commit run --all-files --show-diff-on-failure
